--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,12 +64,15 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.51f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\SpawnLaunchers.cs" />
     <Compile Include="Assets\BulletLauncher.cs" />
     <Compile Include="Assets\BulletPool.cs" />
+    <Compile Include="Assets\AimAtBot.cs" />
     <Compile Include="Assets\BulletBehavior.cs" />
     <Compile Include="Assets\CreatePolygonPoints.cs" />
     <Compile Include="Assets\PlayerMovement.cs" />
     <Compile Include="Assets\BotMovement.cs" />
+    <Compile Include="Assets\DamageShake.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
