Color changing tether display connecting player and bot

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\SpawnLaunchers.cs" />
     <Compile Include="Assets\BulletLauncher.cs" />
     <Compile Include="Assets\BulletPool.cs" />
+    <Compile Include="Assets\TetherIndicator.cs" />
     <Compile Include="Assets\AimAtBot.cs" />
     <Compile Include="Assets\BulletBehavior.cs" />
     <Compile Include="Assets\CreatePolygonPoints.cs" />
