Shield flashes yellow as a block signal

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\PlayerMovement.cs" />
     <Compile Include="Assets\BotMovement.cs" />
     <Compile Include="Assets\DamageShake.cs" />
+    <Compile Include="Assets\SuccessfulBlock.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
