--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,8 @@ jobs:
           targetPlatform: ${{ matrix.targetPlatform }}
       - name: Debug Assets Folder
         run: ls -R Assets/Resources
+        - name: Reimport All Assets
+        run: find Assets -type f | xargs -I {} touch {}
       - uses: actions/upload-artifact@v3
         with:
           name: Build-${{ matrix.targetPlatform }}
