--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,12 @@ jobs:
       #    restore-keys: Library-
      # - if: matrix.targetPlatform == 'Android'
        # uses: jlumbroso/free-disk-space@v1.3.1
+      - name: Debug Assets Folder
+        run: ls -R Assets/Resources
+      - name: Clear Unity Cache
+        run: rm -rf Library/ && rm -rf Temp/
+      - name: Reimport All Assets
+        run: find Assets -type f | xargs -I {} touch {}
       - uses: game-ci/unity-builder@v4
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -30,10 +36,6 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: ${{ matrix.targetPlatform }}
-      - name: Debug Assets Folder
-        run: ls -R Assets/Resources
-      - name: Reimport All Assets
-        run: find Assets -type f | xargs -I {} touch {}
       - uses: actions/upload-artifact@v3
         with:
           name: Build-${{ matrix.targetPlatform }}
